Fix spacing

--- a/app/assets/sass/main-v2-v3.scss
+++ b/app/assets/sass/main-v2-v3.scss
@@ -58,9 +58,11 @@
 /* Sidebar */
 
 .app-u-border-top {
-    border-top: 1px solid $color_nhsuk-blue;
+    border-top: 2px solid $color_nhsuk-blue;
+    margin-top: 26px;
+    margin-left: 16px;
   
-    h2 {
+    h3 {
       margin-bottom: 16px;
       margin-top: 16px;
     }
